# xiao-espc6-ph

./: .gitmodules  CMakeLists.txt  PLAN.md  README.md  sdkconfig.defaults
common/: nvs.c  shell.c
main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  ph_ops.c  ph_ops.h  ph_rpc.c  ph_rpc.h  ph_sensor.c  ph_sensor.h  ph_shell.c  ph_shell.h  temp_sensor.c  temp_sensor.h
